# mlops-zoomcamp-hw1

./: .gitignore  .python-version  duration-prediction.ipynb  pyproject.toml
